# terminal-chess

./: .Dockerfile  .gitignore  Dockerfile  README.md  pyproject.toml
backend/: game.py  game_manager.py  messages.py  requirements.txt  websocket.py
backend1/: game.py  game_manager.py  messages.py  websocket.py
frontend/: chess.css  chess_interface.py
